--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -35,7 +35,11 @@ include("../layouts/menu") %>
             </p>
             <p class="card-footer-item">
               <span>
-                <a href="#" class="has-text-danger">Remover</a>
+                <a
+                  href="/checklists/<%= checklist.id %>?_method=delete"
+                  class="has-text-danger"
+                  >Remover</a
+                >
               </span>
             </p>
           </footer>
