--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -20,7 +20,9 @@ include("../layouts/menu") %>
         <div class="card has-background-white-ter">
           <div class="card-content">
             <p class="subtitle is-size-5"><%= checklist.name %></p>
-            <p class="subtitle is-size-6"><%= checklist.tasks.count %></p>
+            <p class="subtitle is-size-6">
+              <%= checklist.tasks.length %> tarefas
+            </p>
           </div>
           <footer class="card-footer">
             <p class="card-footer-item">
